tests/invalid/23_bit_float.ml
int main() {
    float64 x = 3.5;
    float64 y = 1.5;

    float64 z = x & y;

    return 0;
}
